--- a/trunk/CarPool/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/CarPool/src/main/webapp/WEB-INF/web.xml
@@ -22,6 +22,15 @@
 		</context-param>
 		-->
 	<!-- Handles all requests into the application -->
+	<filter>
+		<filter-name>AuthFilter</filter-name>
+		<filter-class>net.kv.carpool.filters.AuthenticationFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>AuthFilter</filter-name>
+		<url-pattern>*.do</url-pattern>
+	</filter-mapping>
+
 	<servlet>
 		<servlet-name>cp</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
