--- a/trunk/CarPool/src/main/webapp/WEB-INF/web.xml
+++ b/trunk/CarPool/src/main/webapp/WEB-INF/web.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xmlns="http://java.sun.com/xml/ns/javaee"
-	xmlns:web="http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-	http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
-	id="WebApp_ID"
-	version="2.5">
+<web-app xmlns="http://java.sun.com/xml/ns/j2ee"  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
 	<display-name>Car Pool</display-name>
 	<!-- <welcome-file-list>
 		<welcome-file>/WEB-INF/pages/index.jsp</welcome-file>
@@ -42,6 +37,9 @@
 	</servlet-mapping>
 	<!-- http://onjava.com/onjava/2002/06/12/form.html -->
 	<security-constraint>
+		<user-data-constraint>
+			<transport-guarantee>CONFIDENTIAL</transport-guarantee>
+		</user-data-constraint>
 		<web-resource-collection>
 			<web-resource-name>CarPool</web-resource-name>
 			<description>accessible by authorised users</description>
